import '../../../require.js';
import '../../../exports.js';
import './aiserver_pb.js';
import '../../../external/bufbuild/protobuf.js';
import './chat_pb.js';
import './inline_gpt4_pb.js';
import './fastpreviews_pb.js';
import './symbolic_context_pb.js';
import './docs_pb.js';
import './cpp_pb.js';
import './telemetry_pb.js';
import './experiments_pb.js';
import './bugbot_pb.js';
define(
			de[341],
			he([1, 0, 148, 86, 126, 1485, 1481, 643, 892, 367, 1479, 1475, 642]),
			function (ce, e, t, i, w, E, C, d, m, r, u, a, h) {
				"use strict";
				Object.defineProperty(e, "__esModule", { value: !0 }),
					(e.$q0 = void 0),
					(e.$q0 = {
						typeName: "aiserver.v1.AiService",
						methods: {
							healthCheck: {
								name: "HealthCheck",
								I: t.$dG,
								O: t.$eG,
								kind: i.MethodKind.Unary,
							},
							privacyCheck: {
								name: "PrivacyCheck",
								I: t.$fG,
								O: t.$gG,
								kind: i.MethodKind.Unary,
							},
							timeLeftHealthCheck: {
								name: "TimeLeftHealthCheck",
								I: t.$dG,
								O: t.$hG,
								kind: i.MethodKind.Unary,
							},
							throwErrorCheck: {
								name: "ThrowErrorCheck",
								I: t.$$F,
								O: t.$_F,
								kind: i.MethodKind.Unary,
							},
							availableModels: {
								name: "AvailableModels",
								I: t.$aG,
								O: t.$bG,
								kind: i.MethodKind.Unary,
							},
							streamChatTryReallyHard: {
								name: "StreamChatTryReallyHard",
								I: t.$aH,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							rerankDocuments: {
								name: "RerankDocuments",
								I: w.$uA,
								O: w.$vA,
								kind: i.MethodKind.Unary,
							},
							streamComposer: {
								name: "StreamComposer",
								I: t.$iH,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamComposerContext: {
								name: "StreamComposerContext",
								I: t.$ZF,
								O: t.$2F,
								kind: i.MethodKind.ServerStreaming,
							},
							warmComposerCache: {
								name: "WarmComposerCache",
								I: t.$iH,
								O: t.$MH,
								kind: i.MethodKind.Unary,
							},
							keepComposerCacheWarm: {
								name: "KeepComposerCacheWarm",
								I: t.$iJ,
								O: t.$jJ,
								kind: i.MethodKind.Unary,
							},
							streamPotentialLocs: {
								name: "StreamPotentialLocs",
								I: t.$gH,
								O: t.$hH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamPotentialLocsUnderneath: {
								name: "StreamPotentialLocsUnderneath",
								I: t.$eH,
								O: t.$fH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamPotentialLocsInitialQueries: {
								name: "StreamPotentialLocsInitialQueries",
								I: t.$cH,
								O: t.$dH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamNotepadChat: {
								name: "StreamNotepadChat",
								I: t.$bH,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							getChatTitle: {
								name: "GetChatTitle",
								I: t.$GH,
								O: t.$HH,
								kind: i.MethodKind.Unary,
							},
							getCompletion: {
								name: "GetCompletion",
								I: t.$QH,
								O: t.$RH,
								kind: i.MethodKind.Unary,
							},
							getSearch: {
								name: "GetSearch",
								I: t.$SH,
								O: t.$UH,
								kind: i.MethodKind.Unary,
							},
							streamInlineEdits: {
								name: "StreamInlineEdits",
								I: t.$DH,
								O: t.$EH,
								kind: i.MethodKind.ServerStreaming,
							},
							summarizeConversation: {
								name: "SummarizeConversation",
								I: t.$aH,
								O: t.$FH,
								kind: i.MethodKind.Unary,
							},
							isolatedTreesitter: {
								name: "IsolatedTreesitter",
								I: t.$uH,
								O: t.$vH,
								kind: i.MethodKind.Unary,
							},
							getSimplePrompt: {
								name: "GetSimplePrompt",
								I: t.$yH,
								O: t.$zH,
								kind: i.MethodKind.Unary,
							},
							checkLongFilesFit: {
								name: "CheckLongFilesFit",
								I: t.$aH,
								O: t.$AH,
								kind: i.MethodKind.Unary,
							},
							getEvaluationPrompt: {
								name: "GetEvaluationPrompt",
								I: t.$BH,
								O: t.$CH,
								kind: i.MethodKind.Unary,
							},
							getUserInfo: {
								name: "GetUserInfo",
								I: t.$WH,
								O: t.$YH,
								kind: i.MethodKind.Unary,
							},
							clearAndRedoEntireBucket: {
								name: "ClearAndRedoEntireBucket",
								I: t.$ZH,
								O: t.$1H,
								kind: i.MethodKind.Unary,
							},
							streamBranchGemini: {
								name: "StreamBranchGemini",
								I: t.$ME,
								O: t.$SE,
								kind: i.MethodKind.ServerStreaming,
							},
							streamBranchFileSelections: {
								name: "StreamBranchFileSelections",
								I: t.$JE,
								O: t.$KE,
								kind: i.MethodKind.ServerStreaming,
							},
							streamBackgroundEdit: {
								name: "StreamBackgroundEdit",
								I: t.$7G,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamGPTFourEdit: {
								name: "StreamGPTFourEdit",
								I: t.$LG,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamChat: {
								name: "StreamChat",
								I: t.$aH,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamChatWeb: {
								name: "StreamChatWeb",
								I: t.$aH,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							warmChatCache: {
								name: "WarmChatCache",
								I: t.$NH,
								O: t.$OH,
								kind: i.MethodKind.Unary,
							},
							streamEdit: {
								name: "StreamEdit",
								I: t.$yG,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							preloadEdit: {
								name: "PreloadEdit",
								I: t.$zG,
								O: t.$AG,
								kind: i.MethodKind.Unary,
							},
							streamFastEdit: {
								name: "StreamFastEdit",
								I: t.$wG,
								O: t.$xG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamGenerate: {
								name: "StreamGenerate",
								I: t.$iG,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamInlineLongCompletion: {
								name: "StreamInlineLongCompletion",
								I: E.$a0,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							slashEdit: {
								name: "SlashEdit",
								I: t.$pG,
								O: t.$qG,
								kind: i.MethodKind.ServerStreaming,
							},
							slashEditFollowUpWithPreviousEdits: {
								name: "SlashEditFollowUpWithPreviousEdits",
								I: t.$sG,
								O: t.$tG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamAiPreviews: {
								name: "StreamAiPreviews",
								I: C.$d0,
								O: C.$e0,
								kind: i.MethodKind.ServerStreaming,
							},
							shouldTurnOnCppOnboarding: {
								name: "ShouldTurnOnCppOnboarding",
								I: t.$eF,
								O: t.$fF,
								kind: i.MethodKind.Unary,
							},
							streamReview: {
								name: "StreamReview",
								I: t.$jG,
								O: t.$oG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamReviewChat: {
								name: "StreamReviewChat",
								I: t.$lG,
								O: t.$mG,
								kind: i.MethodKind.ServerStreaming,
							},
							checkQueuePosition: {
								name: "CheckQueuePosition",
								I: t.$rH,
								O: t.$sH,
								kind: i.MethodKind.Unary,
							},
							checkUsageBasedPrice: {
								name: "CheckUsageBasedPrice",
								I: t.$pH,
								O: t.$qH,
								kind: i.MethodKind.Unary,
							},
							doThisForMeCheck: {
								name: "DoThisForMeCheck",
								I: t.$2H,
								O: t.$3H,
								kind: i.MethodKind.Unary,
							},
							streamDoThisForMe: {
								name: "StreamDoThisForMe",
								I: t.$8H,
								O: t.$$H,
								kind: i.MethodKind.ServerStreaming,
							},
							streamChatToolformer: {
								name: "StreamChatToolformer",
								I: t.$aH,
								O: t.$aI,
								kind: i.MethodKind.ServerStreaming,
							},
							streamChatToolformerContinue: {
								name: "StreamChatToolformerContinue",
								I: t.$_H,
								O: t.$aI,
								kind: i.MethodKind.ServerStreaming,
							},
							pushAiThought: {
								name: "PushAiThought",
								I: t.$iI,
								O: t.$lI,
								kind: i.MethodKind.Unary,
							},
							checkDoableAsTask: {
								name: "CheckDoableAsTask",
								I: t.$mI,
								O: t.$nI,
								kind: i.MethodKind.Unary,
							},
							reportGroundTruthCandidate: {
								name: "ReportGroundTruthCandidate",
								I: t.$9I,
								O: t.$0I,
								kind: i.MethodKind.Unary,
							},
							reportCmdKFate: {
								name: "ReportCmdKFate",
								I: t.$$I,
								O: t.$_I,
								kind: i.MethodKind.Unary,
							},
							showWelcomeScreen: {
								name: "ShowWelcomeScreen",
								I: t.$$E,
								O: t.$_E,
								kind: i.MethodKind.Unary,
							},
							interfaceAgentInit: {
								name: "InterfaceAgentInit",
								I: t.$oI,
								O: t.$pI,
								kind: i.MethodKind.Unary,
							},
							streamInterfaceAgentStatus: {
								name: "StreamInterfaceAgentStatus",
								I: t.$qI,
								O: t.$rI,
								kind: i.MethodKind.ServerStreaming,
							},
							taskGetInterfaceAgentStatus: {
								name: "TaskGetInterfaceAgentStatus",
								I: t.$sI,
								O: t.$uI,
								kind: i.MethodKind.ServerStreaming,
							},
							taskInit: {
								name: "TaskInit",
								I: t.$vI,
								O: t.$wI,
								kind: i.MethodKind.Unary,
							},
							taskPause: {
								name: "TaskPause",
								I: t.$EI,
								O: t.$FI,
								kind: i.MethodKind.Unary,
							},
							taskInfo: {
								name: "TaskInfo",
								I: t.$DI,
								O: t.$GI,
								kind: i.MethodKind.Unary,
							},
							taskStreamLog: {
								name: "TaskStreamLog",
								I: t.$xI,
								O: t.$HI,
								kind: i.MethodKind.ServerStreaming,
							},
							taskSendMessage: {
								name: "TaskSendMessage",
								I: t.$LI,
								O: t.$MI,
								kind: i.MethodKind.Unary,
							},
							taskProvideResult: {
								name: "TaskProvideResult",
								I: t.$JI,
								O: t.$KI,
								kind: i.MethodKind.Unary,
							},
							createExperimentalIndex: {
								name: "CreateExperimentalIndex",
								I: d.$qt,
								O: d.$rt,
								kind: i.MethodKind.Unary,
							},
							listExperimentalIndexFiles: {
								name: "ListExperimentalIndexFiles",
								I: d.$st,
								O: d.$tt,
								kind: i.MethodKind.Unary,
							},
							listenExperimentalIndex: {
								name: "ListenExperimentalIndex",
								I: d.$ut,
								O: d.$vt,
								kind: i.MethodKind.ServerStreaming,
							},
							registerFileToIndex: {
								name: "RegisterFileToIndex",
								I: d.$Bt,
								O: d.$Tt,
								kind: i.MethodKind.Unary,
							},
							setupIndexDependencies: {
								name: "SetupIndexDependencies",
								I: d.$Dt,
								O: d.$Et,
								kind: i.MethodKind.Unary,
							},
							computeIndexTopoSort: {
								name: "ComputeIndexTopoSort",
								I: d.$Ft,
								O: d.$Gt,
								kind: i.MethodKind.Unary,
							},
							streamChatDeepContext: {
								name: "StreamChatDeepContext",
								I: t.$6F,
								O: t.$7F,
								kind: i.MethodKind.ServerStreaming,
							},
							chooseCodeReferences: {
								name: "ChooseCodeReferences",
								I: d.$Ht,
								O: d.$Tt,
								kind: i.MethodKind.Unary,
							},
							registerCodeReferences: {
								name: "RegisterCodeReferences",
								I: d.$Nt,
								O: d.$Ot,
								kind: i.MethodKind.Unary,
							},
							extractPaths: {
								name: "ExtractPaths",
								I: d.$1t,
								O: d.$2t,
								kind: i.MethodKind.Unary,
							},
							summarizeWithReferences: {
								name: "SummarizeWithReferences",
								I: d.$Pt,
								O: d.$Tt,
								kind: i.MethodKind.Unary,
							},
							documentationQuery: {
								name: "DocumentationQuery",
								I: m.$Yz,
								O: m.$Zz,
								kind: i.MethodKind.Unary,
							},
							availableDocs: {
								name: "AvailableDocs",
								I: t.$9F,
								O: t.$0F,
								kind: i.MethodKind.Unary,
							},
							reportFeedback: {
								name: "ReportFeedback",
								I: t.$NI,
								O: t.$OI,
								kind: i.MethodKind.Unary,
							},
							reportBug: {
								name: "ReportBug",
								I: t.$RI,
								O: t.$SI,
								kind: i.MethodKind.Unary,
							},
							streamChatContext: {
								name: "StreamChatContext",
								I: t.$ZF,
								O: t.$2F,
								kind: i.MethodKind.ServerStreaming,
							},
							generateTldr: {
								name: "GenerateTldr",
								I: t.$MF,
								O: t.$NF,
								kind: i.MethodKind.Unary,
							},
							taskStreamChatContext: {
								name: "TaskStreamChatContext",
								I: t.$OF,
								O: t.$YF,
								kind: i.MethodKind.ServerStreaming,
							},
							rerankResults: {
								name: "RerankResults",
								I: t.$KF,
								O: t.$LF,
								kind: i.MethodKind.Unary,
							},
							modelQuery: {
								name: "ModelQuery",
								I: t.$CF,
								O: t.$DF,
								kind: i.MethodKind.Unary,
							},
							modelQueryV2: {
								name: "ModelQueryV2",
								I: t.$CF,
								O: t.$FF,
								kind: i.MethodKind.ServerStreaming,
							},
							intentPrediction: {
								name: "IntentPrediction",
								I: t.$oF,
								O: t.$pF,
								kind: i.MethodKind.Unary,
							},
							streamCursorTutor: {
								name: "StreamCursorTutor",
								I: t.$AF,
								O: t.$BF,
								kind: i.MethodKind.ServerStreaming,
							},
							checkFeatureStatus: {
								name: "CheckFeatureStatus",
								I: t.$iF,
								O: t.$lF,
								kind: i.MethodKind.Unary,
							},
							getEffectiveTokenLimit: {
								name: "GetEffectiveTokenLimit",
								I: t.$jF,
								O: t.$kF,
								kind: i.MethodKind.Unary,
							},
							getContextScores: {
								name: "GetContextScores",
								I: t.$7E,
								O: t.$8E,
								kind: i.MethodKind.Unary,
							},
							streamCpp: {
								name: "StreamCpp",
								I: t.$QG,
								O: t.$4G,
								kind: i.MethodKind.ServerStreaming,
							},
							cppConfig: {
								name: "CppConfig",
								I: t.$YG,
								O: t.$ZG,
								kind: i.MethodKind.Unary,
							},
							cppEditHistoryStatus: {
								name: "CppEditHistoryStatus",
								I: r.$dx,
								O: r.$ex,
								kind: i.MethodKind.Unary,
							},
							cppAppend: {
								name: "CppAppend",
								I: r.$_w,
								O: r.$ax,
								kind: i.MethodKind.Unary,
							},
							checkNumberConfig: {
								name: "CheckNumberConfig",
								I: t.$mF,
								O: t.$nF,
								kind: i.MethodKind.Unary,
							},
							streamTerminalAutocomplete: {
								name: "StreamTerminalAutocomplete",
								I: t.$SG,
								O: t.$6G,
								kind: i.MethodKind.ServerStreaming,
							},
							streamPseudocodeGenerator: {
								name: "StreamPseudocodeGenerator",
								I: t.$UG,
								O: t.$VG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamPseudocodeMapper: {
								name: "StreamPseudocodeMapper",
								I: t.$WG,
								O: t.$XG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamAiLintBug: {
								name: "StreamAiLintBug",
								I: t.$BG,
								O: t.$FG,
								kind: i.MethodKind.ServerStreaming,
							},
							streamAiCursorHelp: {
								name: "StreamAiCursorHelp",
								I: t.$OG,
								O: t.$PG,
								kind: i.MethodKind.ServerStreaming,
							},
							logUserLintReply: {
								name: "LogUserLintReply",
								I: t.$GG,
								O: t.$HG,
								kind: i.MethodKind.Unary,
							},
							logLinterExplicitUserFeedback: {
								name: "LogLinterExplicitUserFeedback",
								I: t.$IG,
								O: t.$JG,
								kind: i.MethodKind.Unary,
							},
							streamFixMarkers: {
								name: "StreamFixMarkers",
								I: t.$TI,
								O: t.$6I,
								kind: i.MethodKind.ServerStreaming,
							},
							reportInlineAction: {
								name: "ReportInlineAction",
								I: u.$f0,
								O: u.$g0,
								kind: i.MethodKind.Unary,
							},
							streamPriomptPrompt: {
								name: "StreamPriomptPrompt",
								I: t.$gF,
								O: t.$hF,
								kind: i.MethodKind.ServerStreaming,
							},
							streamLint: {
								name: "StreamLint",
								I: t.$8I,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							streamNewLintRule: {
								name: "StreamNewLintRule",
								I: t.$KG,
								O: t.$KH,
								kind: i.MethodKind.ServerStreaming,
							},
							aiProject: {
								name: "AiProject",
								I: t.$aF,
								O: t.$bF,
								kind: i.MethodKind.ServerStreaming,
							},
							toCamelCase: {
								name: "ToCamelCase",
								I: t.$cF,
								O: t.$dF,
								kind: i.MethodKind.Unary,
							},
							reportGenerationFeedback: {
								name: "ReportGenerationFeedback",
								I: t.$9E,
								O: t.$0E,
								kind: i.MethodKind.Unary,
							},
							getThoughtAnnotation: {
								name: "GetThoughtAnnotation",
								I: t.$zE,
								O: t.$AE,
								kind: i.MethodKind.Unary,
							},
							streamWebCmdKV1: {
								name: "StreamWebCmdKV1",
								I: t.$5E,
								O: t.$6E,
								kind: i.MethodKind.ServerStreaming,
							},
							streamNextCursorPrediction: {
								name: "StreamNextCursorPrediction",
								I: t.$VE,
								O: t.$YE,
								kind: i.MethodKind.ServerStreaming,
							},
							isCursorPredictionEnabled: {
								name: "IsCursorPredictionEnabled",
								I: t.$TE,
								O: t.$UE,
								kind: i.MethodKind.Unary,
							},
							getCppEditClassification: {
								name: "GetCppEditClassification",
								I: t.$1E,
								O: t.$2E,
								kind: i.MethodKind.Unary,
							},
							getTerminalCompletion: {
								name: "GetTerminalCompletion",
								I: t.$aE,
								O: t.$bE,
								kind: i.MethodKind.Unary,
							},
							takeNotesOnCommitDiff: {
								name: "TakeNotesOnCommitDiff",
								I: t.$FE,
								O: t.$GE,
								kind: i.MethodKind.Unary,
							},
							bulkEmbed: {
								name: "BulkEmbed",
								I: t.$CE,
								O: t.$DE,
								kind: i.MethodKind.Unary,
							},
							continueChatRequestWithCommits: {
								name: "ContinueChatRequestWithCommits",
								I: t.$HE,
								O: a.$p0,
								kind: i.MethodKind.Unary,
							},
							backgroundCmdKEval: {
								name: "BackgroundCmdKEval",
								I: t.$tE,
								O: t.$yE,
								kind: i.MethodKind.ServerStreaming,
							},
							backgroundCmdK: {
								name: "BackgroundCmdK",
								I: t.$jE,
								O: t.$sE,
								kind: i.MethodKind.ServerStreaming,
							},
							streamCursorMotion: {
								name: "StreamCursorMotion",
								I: t.$hE,
								O: t.$iE,
								kind: i.MethodKind.ServerStreaming,
							},
							calculateAutoSelection: {
								name: "CalculateAutoSelection",
								I: t.$dE,
								O: t.$gE,
								kind: i.MethodKind.Unary,
							},
							getAtSymbolSuggestions: {
								name: "GetAtSymbolSuggestions",
								I: t.$0D,
								O: t.$$D,
								kind: i.MethodKind.Unary,
							},
							getCodebaseQuestions: {
								name: "GetCodebaseQuestions",
								I: t.$aH,
								O: t.$7D,
								kind: i.MethodKind.Unary,
							},
							getRankedContextFromContextBank: {
								name: "GetRankedContextFromContextBank",
								I: t.$5D,
								O: t.$6D,
								kind: i.MethodKind.ServerStreaming,
							},
							cppEditHistoryAppend: {
								name: "CppEditHistoryAppend",
								I: r.$bx,
								O: r.$cx,
								kind: i.MethodKind.Unary,
							},
							devOnlyGetPastRequestIds: {
								name: "DevOnlyGetPastRequestIds",
								I: t.$2D,
								O: t.$4D,
								kind: i.MethodKind.Unary,
							},
							getFilesForComposer: {
								name: "GetFilesForComposer",
								I: t.$bJ,
								O: t.$cJ,
								kind: i.MethodKind.Unary,
							},
							tryParseTypeScriptTreeSitter: {
								name: "TryParseTypeScriptTreeSitter",
								I: t.$ZD,
								O: t.$1D,
								kind: i.MethodKind.Unary,
							},
							nameTab: {
								name: "NameTab",
								I: t.$VD,
								O: t.$WD,
								kind: i.MethodKind.Unary,
							},
							isTerminalFinished: {
								name: "IsTerminalFinished",
								I: t.$CD,
								O: t.$DD,
								kind: i.MethodKind.Unary,
							},
							isTerminalFinishedV2: {
								name: "IsTerminalFinishedV2",
								I: t.$CD,
								O: t.$ED,
								kind: i.MethodKind.Unary,
							},
							testModelStatus: {
								name: "TestModelStatus",
								I: t.$XD,
								O: t.$YD,
								kind: i.MethodKind.Unary,
							},
							findBugs: {
								name: "FindBugs",
								I: t.$dJ,
								O: t.$eJ,
								kind: i.MethodKind.Unary,
							},
							contextReranking: {
								name: "ContextReranking",
								I: t.$TD,
								O: t.$UD,
								kind: i.MethodKind.Unary,
							},
							autoContext: {
								name: "AutoContext",
								I: t.$ID,
								O: t.$KD,
								kind: i.MethodKind.Unary,
							},
							writeGitCommitMessage: {
								name: "WriteGitCommitMessage",
								I: t.$gJ,
								O: t.$hJ,
								kind: i.MethodKind.Unary,
							},
							streamBugBot: {
								name: "StreamBugBot",
								I: h.$wv,
								O: t.$SD,
								kind: i.MethodKind.ServerStreaming,
							},
							checkBugBotPrice: {
								name: "CheckBugBotPrice",
								I: t.$LD,
								O: t.$MD,
								kind: i.MethodKind.Unary,
							},
							checkBugBotTelemetryHealthy: {
								name: "CheckBugBotTelemetryHealthy",
								I: t.$ND,
								O: t.$OD,
								kind: i.MethodKind.Unary,
							},
							getSuggestedBugBotIterations: {
								name: "GetSuggestedBugBotIterations",
								I: t.$PD,
								O: t.$QD,
								kind: i.MethodKind.Unary,
							},
							testBidi: {
								name: "TestBidi",
								I: t.$FD,
								O: t.$GD,
								kind: i.MethodKind.BiDiStreaming,
							},
							streamDiffReview: {
								name: "StreamDiffReview",
								I: t.$kJ,
								O: t.$nJ,
								kind: i.MethodKind.ServerStreaming,
							},
						},
					});
			},
		),
		